# aurto

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  dockerREADME.md  makefile  makelocalaur  makelocalaur.PKGBUILD  release  test
.github/workflows/: build.yml  ci.yml
completion/bash/: aurto
completion/fish/: aurto.fish
completion/zsh/: _aurto
conf/: 50_aurto_passwordless  aurto.conf  aurto.pacman.conf  makepkg-chroot.conf  pacman-chroot.conf  pacman-extra-aurto.conf
install/: aurto.install
lib/: check-aurto-git  update-aurto
lib/aurto/: aur-vercmp-devel  check-aurto-git  default-trusted-users.txt  install  shared-functions  summerize-build  sync-devel  update-aurto
timer/: check-aurto-git-trigger.service  check-aurto-git-trigger.timer  update-aurto-startup.timer  update-aurto.service  update-aurto.timer
trust-check/: Cargo.toml
trust-check/src/: main.rs
