[package]
name = "trust-check"
version = "0.0.0" # not published
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0.137"
ureq = { version = "3", features = ["json"] }

[profile.release]
lto = true
panic = "abort"
opt-level = "s"
strip = true
